// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo -- item-disabled 1`] = `
.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3.c3.c3 {
  pointer-events: none;
  color: #bbb;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .style__TitleContentWrap-jTzrop:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c3"
        disabled=""
      >
        Menu 2 - disabled
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu 1`] = `
.c25 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c21 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c22 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c24 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c19 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c19 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c19,
.c19 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c19 .c20:hover,
.c19 .c23:hover,
.c19 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c18 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background: #fff;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c18:hover {
  color: #4074e1;
  border-color: #4683e6;
  background: #fff;
}

.c18[disabled] {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c12 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c13 {
  width: 20px;
  height: 20px;
}

.c6 .c15 {
  left: 13px;
  height: 10px;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c9 {
  display: none;
}

.c17 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c17:hover {
  border-color: #4683e6;
}

.c17 .c13 {
  width: 20px;
  height: 20px;
}

.c17 .c15 {
  left: 13px;
  height: 10px;
}

.c17 .c9,
.c17 .c11 {
  line-height: 16px;
}

.c17 .c9 {
  padding-right: 20px;
}

.c17 .c11 {
  padding-left: 20px;
}

.c17 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c17 .c13 {
  left: 49px;
}

.c17 .c15 {
  background: #9fecc0;
}

.c17 .c11 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        selectable
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c17"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        refreshMenuData
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <button
          class="c18"
          type="button"
        >
          refreshMenuData
        </button>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c19"
    >
      <div
        class="c20 c21"
      >
        root-0-item
      </div>
      <div
        class="c20 c21"
      >
        root-1-item
      </div>
      <div
        class="c20 c21"
      >
        root-2-item
      </div>
      <div>
        <div>
          <div
            class="c22"
          >
            <div
              class="c23 c24"
            >
              root-0-subMenu
              <i
                class="icon__caret-right c25 "
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c22"
          >
            <div
              class="c23 c24"
            >
              root-1-subMenu
              <i
                class="icon__caret-right c25 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-collapse 1`] = `
.c5 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c4 {
  color: #526075;
}

.c9 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c6 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c8 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid #c3cad9;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c11 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .c7:hover,
.c0 .c10:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__up c9 "
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="c10 c11 c3"
              >
                <i
                  class="icon__checkbox c4 c5 "
                />
                全选
              </span>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 1
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 2
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 3
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__up c9 "
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="c10 c11 c3"
              >
                <i
                  class="icon__checkbox c4 c5 "
                />
                全选
              </span>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 1
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 2
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 3
                </span>
              </div>
              <div
                class="c1 c2"
              >
                <span
                  class="c3"
                >
                  <i
                    class="icon__checkbox c4 c5 "
                  />
                  Menu 4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 3
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 3
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-controlled 1`] = `
.c5 {
  margin-right: 8px;
  font-size: 14px;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c7 .c4 {
  color: #526075;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c4 {
  color: #4074e1;
}

.c6 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2.c2.c2 {
  color: #4074e1;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .style__TitleContentWrap-jTzrop:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
        selected=""
      >
        <span
          checked=""
          class="c3"
        >
          <i
            class="icon__checkbox-ed c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c6"
      >
        <span
          class="c7"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
        selected=""
      >
        <span
          checked=""
          class="c3"
        >
          <i
            class="icon__checkbox-ed c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c6"
      >
        <span
          class="c7"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
        selected=""
      >
        <span
          checked=""
          class="c3"
        >
          <i
            class="icon__checkbox-ed c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c6"
      >
        <span
          class="c7"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
        selected=""
      >
        <span
          checked=""
          class="c3"
        >
          <i
            class="icon__checkbox-ed c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c6"
      >
        <span
          class="c7"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-multiple 1`] = `
.c5 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c4 {
  color: #526075;
}

.lnjPzf .c4 {
  color: #4074e1;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .style__TitleContentWrap-jTzrop:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c2"
      >
        Menu 2
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-selectable 1`] = `
.c5 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c4 {
  color: #526075;
}

.lnjPzf .c4 {
  color: #4074e1;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .style__TitleContentWrap-jTzrop:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-showSelectAll 1`] = `
.c5 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c4 {
  color: #526075;
}

.lnjPzf .c4 {
  color: #4074e1;
}

.c9 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c6 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c8 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid #c3cad9;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c10 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c12 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .c7:hover,
.c0 .c11:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c6"
          >
            <div
              class="c7 c10"
            >
              SubMenu 3
              <i
                class="icon__caret-right c9 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c11 c12 c3"
      >
        <i
          class="icon__checkbox c4 c5 "
        />
        全选
      </span>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 1
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 2
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 3
        </span>
      </div>
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <i
            class="icon__checkbox c4 c5 "
          />
          Menu 4
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c6"
          >
            <div
              class="c7 c10"
            >
              SubMenu 3
              <i
                class="icon__caret-right c9 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c2"
      >
        Menu 2
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c6"
          >
            <div
              class="c7 c10"
            >
              SubMenu 3
              <i
                class="icon__caret-right c9 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c2"
      >
        Menu 2
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 1
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  SubMenu 2
                  <i
                    class="icon__down c9 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c6"
          >
            <div
              class="c7 c10"
            >
              SubMenu 3
              <i
                class="icon__caret-right c9 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-styleType 1`] = `
.c6 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c5 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid #c3cad9;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c7 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .c4:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c2"
      >
        Menu 2
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c3"
              >
                <div
                  class="c4 c5"
                >
                  SubMenu 1 - default
                  <i
                    class="icon__down c6 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c3"
              >
                <div
                  class="c4 c5"
                >
                  SubMenu 2 - collapse
                  <i
                    class="icon__down c6 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="c3"
          >
            <div
              class="c4 c7"
            >
              SubMenu 3 - popover
              <i
                class="icon__caret-right c6 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-title 1`] = `
.c7.c7.c7 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c6 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c3 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c5 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid #c3cad9;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  font-size: 12px;
}

.c0 .style__PopupContentWrap-jUSLTy {
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-jUSLTy {
  border: 1px solid #c3cad9;
  color: #6b798e;
  background: #fff;
}

.c0 .c1:hover,
.c0 .c4:hover,
.c0 .style__SelectAllCheckbox-fLLnPQ:hover {
  background: #eaf3fd;
  color: unset;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        Menu 1
      </div>
      <div
        class="c1 c2"
      >
        Menu 2
      </div>
      <div
        class="c1 c2"
      >
        Menu 3
      </div>
      <div
        class="c1 c2"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c3"
              >
                <div
                  class="c4 c5"
                >
                  SubMenu 1
                  <i
                    class="icon__down c6 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="c3"
              >
                <div
                  class="c4 c5"
                >
                  <i
                    class="icon__loading c7"
                  />
                  <i
                    class="icon__down c6 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
